# BALLS

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BALLS.pro  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  LICENSE  README.md  Vagrantfile  appveyor.yml  before_install.sh  common.pri  install.sh  qt-installer-console.js  script.sh
BALLS/: BALLS.pro  BallsWindow.ui  CMakeLists.txt  Constants.cpp  Constants.hpp  Qtilities.pro  common.pri  glm.pro  main.cpp  notes.txt  precompiled.cpp  precompiled.hpp  qtpropertybrowser.pro  resources.qrc
BALLS-Main/: CMakeLists.txt  main.cpp
BALLS-Tests/: BALLS-Tests.pro  CMakeLists.txt
BALLS-Tests/PropertyObjectTests/: CMakeLists.txt  PropertyObjectTests.pro  tst_PropertyObjectTests.cpp
BALLS-Tests/TestConversions/: CMakeLists.txt  TestConversions.pro
BALLS-Tests/TestJSONConversions/: CMakeLists.txt  TestJSONConversions.pro
BALLS-Tests/TestUniforms/: CMakeLists.txt  TestUniforms.pro  tst_TestUniformsTest.cpp
BALLS/BALLS/: BALLS.pro  BallsWindow.ui  Constants.cpp  Constants.hpp  main.cpp  precompiled.cpp  precompiled.hpp
BALLS/BALLS-Tests/: BALLS-Tests.pro
BALLS/BALLS-Tests/PropertyObjectTests/: PropertyObjectTests.pro  tst_PropertyObjectTests.cpp
BALLS/BALLS-Tests/TestConversions/: TestConversions.pro  tst_TestConversions.cpp
BALLS/BALLS-Tests/TestJSONConversions/: TestJSONConversions.pro  tst_TestJSONConversionsTest.cpp
BALLS/BALLS-Tests/TestUniforms/: TestUniforms.pro  tst_TestUniformsTest.cpp
BALLS/BALLS/config/: ProjectConfig.hpp  Settings.cpp  Settings.hpp
BALLS/BALLS/example/: default.balls
BALLS/BALLS/exception/: FileException.cpp  FileException.hpp  JsonException.cpp  JsonException.hpp
BALLS/BALLS/gl/: OpenGLPointers.cpp  OpenGLPointers.hpp
BALLS/BALLS/glsl/: default.frag  phong.frag  phong.vert
BALLS/BALLS/mesh/: Generators.cpp  Generators.hpp  Mesh.cpp  Mesh.hpp  MeshFunction.cpp  MeshFunction.hpp  MeshGenerator.cpp  MeshGenerator.hpp  MeshParameter.hpp
BALLS/BALLS/model/: ImageTexture.cpp  ImageTexture.hpp  Meshes.cpp  Meshes.hpp  OpenGLState.cpp  OpenGLState.hpp  Texture.cpp  Texture.hpp  Uniforms.cpp  Uniforms.hpp
BALLS/BALLS/model/gl/: BlendState.cpp  BlendState.hpp  ClipOptions.cpp  ClipOptions.hpp  ColorOptions.cpp  ColorOptions.hpp  DepthOptions.cpp  DepthOptions.hpp  GeometryOptions.cpp  GeometryOptions.hpp  Hints.cpp  Hints.hpp  ImplementationInfo.cpp  ImplementationInfo.hpp  Limits.cpp  Limits.hpp  SampleOptions.cpp  SampleOptions.hpp  ViewOptions.cpp  (+3 more)
BALLS/BALLS/shader/: ShaderInputs.cpp  ShaderInputs.hpp  ShaderUniform.cpp  ShaderUniform.hpp
BALLS/BALLS/text/: BALLS_en.ts  BALLS_es.ts
BALLS/BALLS/ui/: BallsCanvas.cpp  BallsCanvas.hpp  BallsWindow.cpp  BallsWindow.hpp  QsciLexerGLSL.cpp  QsciLexerGLSL.h  UniformWidget.hpp  Uniforms.cpp  Uniforms.hpp  glslsyntax.cpp  glslsyntax.hpp
BALLS/BALLS/util/: ArcBall.hpp  ArcLookAt.cpp  Logging.cpp  Logging.hpp  MetaTypeConverters.cpp  MetaTypeConverters.hpp  Trackball.cpp  Trackball.hpp  TypeInfo.cpp  TypeInfo.hpp  Util.cpp  Util.hpp
BALLS/QPropertyEditor/: QPropertyEditor.pro  precompiled.cpp  precompiled.hpp
BALLS/QPropertyEditor/QPropertyEditor/: ColorCombo.cpp  ColorCombo.h  EnumProperty.cpp  EnumProperty.h  Property.cpp  Property.h  QPropertyEditorWidget.cpp  QPropertyEditorWidget.h  QPropertyModel.cpp  QPropertyModel.h  QVariantDelegate.cpp  QVariantDelegate.h
BALLS/config/: ProjectConfig.cpp  ProjectConfig.hpp  Settings.cpp  Settings.hpp
BALLS/example/: default.balls  phong.balls
BALLS/exception/: FileException.cpp  FileException.hpp  JsonException.hpp
BALLS/gl/: OpenGLConstants.hpp  OpenGLPointers.cpp  OpenGLPointers.hpp
BALLS/glsl/: default.frag  default.vert  phong.frag  phong.vert
BALLS/mesh/: Generators.cpp  Generators.hpp  Mesh.cpp  Mesh.hpp  MeshFunction.cpp  MeshFunction.hpp  MeshGenerator.cpp  MeshGenerator.hpp  MeshParameter.hpp  ShaderInputs.cpp  ShaderInputs.hpp
BALLS/model/: ImageTexture.cpp  ImageTexture.hpp  Meshes.cpp  Meshes.hpp  OpenGLState.cpp  OpenGLState.hpp  Texture.hpp  Uniforms.cpp  Uniforms.hpp
BALLS/model/gl/: BlendState.cpp  BlendState.hpp  ClipOptions.cpp  ClipOptions.hpp  ColorOptions.cpp  ColorOptions.hpp  DepthOptions.cpp  DepthOptions.hpp  GeometryOptions.cpp  GeometryOptions.hpp  Hints.cpp  Hints.hpp  ImplementationInfo.cpp  ImplementationInfo.hpp  Limits.cpp  SampleOptions.cpp  StencilOptions.cpp  StencilOptions.hpp
BALLS/model/mesh/: BaseCylindricalMesh.cpp  BaseSphereMesh.hpp  BoxMesh.cpp  BoxMesh.hpp  CapsuleMesh.hpp  ConeMesh.cpp  ConeMesh.hpp  CylinderMesh.cpp  CylinderMesh.hpp  DiskMesh.hpp  DodecahedronMesh.cpp  DodecahedronMesh.hpp  IcoSphereMesh.cpp  IcoSphereMesh.hpp  IcosahedronMesh.hpp  Mesh.cpp  Mesh.hpp  MeshMesh.cpp  PlaneMesh.hpp  RoundedBoxMesh.hpp  SphereMesh.hpp  SphericalConeMesh.hpp  SphericalTriangleMesh.hpp  SpringMesh.hpp  TorusKnotMesh.hpp  TorusMesh.hpp  TriangleMesh.cpp  TriangleMesh.hpp  TubeMesh.cpp  TubeMesh.hpp
BALLS/shader/: ShaderInputs.cpp  ShaderInputs.hpp  ShaderUniform.cpp  ShaderUniform.hpp  default.frag  default.vert
BALLS/text/: BALLS_en.ts
BALLS/ui/: BallsCanvas.cpp  BallsCanvas.hpp  BallsCanvasUniformInitializers.cpp  BallsWindow.cpp  BallsWindow.hpp  GLSLHighlighter.cpp  GLSLHighlighter.hpp  GLSLPatterns.cpp  GLSLPatterns.hpp  UniformWidget.cpp  UniformWidget.hpp  VectorWidget.cpp  VectorWidget.hpp  glslhighlighter.cpp  glslhighlighter.hpp  glslsyntax.cpp  glslsyntax.hpp
BALLS/ui/docks/: MeshManager.ui  MeshManagerWidget.cpp  TextureManager.cpp  TextureManager.hpp  TextureManager.ui
BALLS/ui/property/: MatrixProperties.cpp  MatrixProperty.hpp  Vector2Property.hpp  VectorProperty.cpp
BALLS/util/: AABB.cpp  AABB.hpp  ArcBall.cpp  ArcLookAt.hpp  MetaTypeConverters.cpp  MetaTypeConverters.hpp  Util.cpp  Util.hpp
QPropertyEditor/: CMakeLists.txt  QPropertyEditor.pro  QPropertyEditor_2005.vcproj  QPropertyEditor_2008.vcproj  precompiled.hpp
QPropertyEditor/QPropertyEditor/: ColorCombo.cpp  ColorCombo.h  EnumProperty.cpp  EnumProperty.h  QPropertyEditorWidget.cpp  QPropertyModel.cpp  QPropertyModel.h  QVariantDelegate.h
(+87 files in other folders)
